--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <meta property="og:type" content="website">
 
         <!--========Title===== -->
-        <title>Midhun V S</title>
+        <title>Giới thiệu bản thân</title>
 
         <!--========Site Icon===== -->
         <link rel="shortcut icon" type="image/png" href="./img/about.png">
