--- a/index.html
+++ b/index.html
@@ -382,15 +382,15 @@
                 <h2>Contact <span>Me</span></h2>
                 <center><h4>Get in Touch</h4>
                 <div class="contact-list">
-                    <li><i class="bx bxs-phone-call" ></i>1234567890</li>
-                    <li><i class='bx bxl-gmail'></i>example@mail.com</li>
-                    <li><i class='bx bxs-location-plus' ></i>Earth 001</li>
+                    <li><i class="bx bxs-phone-call" ></i>+84385668901</li>
+                    <li><i class='bx bxl-gmail'></i>dungxaolozvsanh@mail.com</li>
+                    <li><i class='bx bxs-location-plus' ></i>Uông Bí - Quảng Ninh - VN</li>
                     
                 </div>
                 <div class="contact-icons">
                     <a href="https://www.linkedin.com" target="_blank"><i class="bx bxl-linkedin"></i></a>
-                    <a href="https://github.com/" target="_blank"><i class='bx bxl-github'></i></a>
-                    <a href="https://www.youtube.com/"><i class='bx bxl-youtube'></i></a>
+                    <a href="https://github.com/BeThanh11t" target="_blank"><i class='bx bxl-github'></i></a>
+                    <a href="https://www.youtube.com/PhamKimThanh"><i class='bx bxl-youtube'></i></a>
                     <a href="https://instagram.com/" target="_blank"><i class="bx bxl-instagram"></i></a>
                 </div>
                 </center>
