--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                 </div>
                 </center>
                 <div class="last-text">
-                    <p>Developed by Midhun <i class='bx bx-copyright' style="color: white;"></i> 2024</p>
+                    <p>Developed by BeThanh11T <i class='bx bx-copyright' style="color: white;"></i> 2024</p>
                 </div>
             </div>
         </section>
