--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!--========Social Media Tag=========-->
         <meta property="og:title" content="Midhun V S">
         <meta property="og:description" content="A passionate 'Web Developer' | 'Python Developer' from India. This portfolio showcasing projects, skills, and experiences in web development, software engineering, and more. Discover my work, professional journey, and get in touch for collaborations.">
-        <meta property="og:image" content="https://vsmidhun21.github.io/img/Preview.png">
+        <meta property="og:image" content="https://bethanh11t.github.io/profile/img/Preview.png">
         <meta property="og:url" content="https://bethanh11t.io">
         <meta property="og:type" content="website">
 
@@ -277,7 +277,7 @@
                             </p>
                             <div class="project-icons">
                                 <a href="https://github.com/BeThanh11T", target="_blank"><i class='bx bxl-github'></i></a>
-                                <a href="https://www.youtube.com/c/Ph%E1%BA%A1mKimTh%C3%A0nh", target="_blank"><i class='bx bx-link-external'></i></a>
+                                <a href="https://www.youtube.com/PhamKimThanh", target="_blank"><i class='bx bx-link-external'></i></a>
                             </div>
                         </div>
                         <div class="project-tools">
@@ -332,7 +332,7 @@
                             </p>
                             <div class="project-icons">
                                 <a href="https://github.com/BeThanh11T", target="_blank"><i class='bx bxl-github'></i></a>
-                                <a href="https://www.youtube.com/c/Ph%E1%BA%A1mKimTh%C3%A0nh", target="_blank"><i class='bx bx-link-external'></i></a>
+                                <a href="https://www.youtube.com/PhamKimThanh", target="_blank"><i class='bx bx-link-external'></i></a>
                             </div>
                         </div>
                         <div class="project-tools">
@@ -359,7 +359,7 @@
                             </p>
                             <div class="project-icons">
                                 <a href="https://github.com/BeThanh11T/", target="_blank"><i class='bx bxl-github'></i></a>
-                                <a href="https://www.youtube.com/c/Ph%E1%BA%A1mKimTh%C3%A0nh", target="_blank"><i class='bx bx-link-external'></i></a>
+                                <a href="https://www.youtube.com/PhamKimThanh", target="_blank"><i class='bx bx-link-external'></i></a>
                             </div>
                         </div>
                         <div class="project-tools">
