--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="canonical" href="https://bethanh11t.io">
 
         <!--========Social Media Tag=========-->
-        <meta property="og:title" content="Midhun V S">
+        <meta property="og:title" content="BeThanh11T">
         <meta property="og:description" content="A passionate 'Web Developer' | 'Python Developer' from India. This portfolio showcasing projects, skills, and experiences in web development, software engineering, and more. Discover my work, professional journey, and get in touch for collaborations.">
         <meta property="og:image" content="https://bethanh11t.github.io/profile/img/Preview.png">
         <meta property="og:url" content="https://bethanh11t.io">
@@ -40,12 +40,12 @@
             {
                 "@context": "http://schema.org",
                 "@type": "Person",
-                "name": "Midhun V S",
-                "url": "https://vsmidhun.site",
-                "image": "https://vsmidhun21.github.io/img/newabt.png",
+                "name": "Phạm Kim Thành",
+                "url": "https://gocmod.com",
+                "image": "https://bethanh11t.github.io/profile/img/Preview.png",
                 "sameAs": [
-                    "https://www.linkedin.com/in/midhun-v-s",
-                    "https://instagram.com/midhun_021"
+                    "https://fb.com/dung.goi.thanh.la.idol",
+                    "https://instagram.com/BeThanh11T"
                 ],
                 "jobTitle": "Web Developer",
                 "description": "Passionate web developer with experience in creating responsive and interactive websites.",
