--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                 </div>
 
                 <div class="home-sci">
-                    <a href="https://www.linkedin.com"style="--i:7" target="_blank"><i class='bx bxl-linkedin'></i></a>
-                    <a href="https://github.com/"style="--i:8" target="_blank"><i class='bx bxl-github'></i></a>
-                    <a href="https://instagram.com/"style="--i:9" target="_blank"><i class='bx bxl-instagram' ></i></a>
-                    <a href="https://www.youtube.com/"style="--i:10" target="_blank"><i class='bx bxl-youtube'></i></a>
+                    <a href="https://www.gocmod.com"style="--i:7" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://github.com/BeThanh11T"style="--i:8" target="_blank"><i class='bx bxl-github'></i></a>
+                    <a href="https://www.facebook.com/dung.goi.thanh.la.idol"style="--i:9" target="_blank"><i class='bx bxl-instagram' ></i></a>
+                    <a href="https://www.youtube.com/PhamKimThanh"style="--i:10" target="_blank"><i class='bx bxl-youtube'></i></a>
                 </div>
                 <a href="#RESUME LINK" style="--i:11" class="btn-box" target="_blank">Download Resume</a>
             </div>
