--- a/index.html
+++ b/index.html
@@ -383,8 +383,8 @@
                 <center><h4>Get in Touch</h4>
                 <div class="contact-list">
                     <li><i class="bx bxs-phone-call" ></i>+84385668901</li>
-                    <li><i class='bx bxl-gmail'></i>dungxaolozvsanh@mail.com</li>
-                    <li><i class='bx bxs-location-plus' ></i>Uông Bí - Quảng Ninh - VN</li>
+                    <li><i class='bx bxl-gmail'></i>dungxaolozvsanh@gmail.com</li>
+                    <li><i class='bx bxs-location-plus' ></i>Quảng Ninh - Việt Nam</li>
                     
                 </div>
                 <div class="contact-icons">
