--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     <div class="project-details-box">
                         <div class="project-main-info">
                             <span>Project #1</span>
-                            <h3>Drowsiness Detection</h3>
+                            <h3>Ý tưởng khởi nghiệp</h3>
                             <p>
                                 The face of the driver is captured and right && left eyes are detected.
                                 If eye is closed the source value will be incremented.
@@ -285,7 +285,7 @@
                         </div>
                     </div>
                     <div class="project-image-box">
-                        <a href="https://www.youtube.com/watch?v=E2Q2FvgzgNw", target="_blank", class="project-img-link">
+                        <a href="https://uhl.edu.vn/tin-tuc/8-y-tuong-lot-vao-vong-chung-ket-cuoc-thi-sinh-vien-voi-y-tuong-khoi-nghiep-truong-dai-hoc-ha-long-nam-2024/", target="_blank", class="project-img-link">
                             <img src="./img/project.png" alt="Project Preview Image" />
                         </a>
                     </div>
@@ -318,60 +318,7 @@
                     </div>
                 </div>
 
-                <!--===========================Project #3==================-->
-                <div class="project project1 reveal">
-                    <div class="project-details-box">
-                        <div class="project-main-info">
-                            <span>Project #3</span>
-                            <h3>Leaf Disease Detection</h3>
-                            <p>
-                                The program will get leaf image as input.
-                                By analyzing the color, holes etc. the disease of the leaf is identified.
-                                After analyzing if there is any disease is spotted then the name of the disease is displayed.
-                                If no disease found then "Healthy Leaf" will be displayed as output.
-                            </p>
-                            <div class="project-icons">
-                                <a href="https://github.com/BeThanh11T", target="_blank"><i class='bx bxl-github'></i></a>
-                                <a href="https://www.youtube.com/PhamKimThanh", target="_blank"><i class='bx bx-link-external'></i></a>
-                            </div>
-                        </div>
-                        <div class="project-tools">
-                            <p>Python, OpenCV, Tkinter</p>
-                        </div>
-                    </div>
-                    <div class="project-image-box">
-                        <a href="https://www.youtube.com/watch?v=E2Q2FvgzgNw", target="_blank", class="project-img-link">
-                            <img src="./img/project.png" alt="Project Preview Image" />
-                        </a>
-                    </div>
-                </div>
 
-                <!--===============Project #4=============-->
-                <div class="project project2 reveal">
-                    <div class="project-details-box">
-                        <div class="project-main-info">
-                            <span>Project #4</span>
-                            <h3>Cement Bag Automation</h3>
-                            <p>
-                                The program gets input from the live camera and convert to separate frames.
-                                The frames will detect the cement bag in the conveyor.
-                                When the cement bags cross a point then the count of the cement bag is incremented and the data will be stored in the database with exact datetime.
-                            </p>
-                            <div class="project-icons">
-                                <a href="https://github.com/BeThanh11T/", target="_blank"><i class='bx bxl-github'></i></a>
-                                <a href="https://www.youtube.com/PhamKimThanh", target="_blank"><i class='bx bx-link-external'></i></a>
-                            </div>
-                        </div>
-                        <div class="project-tools">
-                            <p>Python, OpenCV, YOLO, SQL</p>
-                        </div>
-                    </div>
-                    <div class="project-image-box">
-                        <a href="https://www.youtube.com/watch?v=E2Q2FvgzgNw", target="_blank", class="project-img-link">
-                            <img src="./img/project.png" alt="Project Preview Image" />
-                        </a>
-                    </div>
-                </div>
 
             </div>
         </section>
