--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     </div>
                     <div class="project-image-box">
                         <a href="https://uhl.edu.vn/tin-tuc/8-y-tuong-lot-vao-vong-chung-ket-cuoc-thi-sinh-vien-voi-y-tuong-khoi-nghiep-truong-dai-hoc-ha-long-nam-2024/", target="_blank", class="project-img-link">
-                            <img src="./img/project.png" alt="Project Preview Image" />
+                            <img src="./img/projectytkn.jpg" alt="Project Preview Image" />
                         </a>
                     </div>
                 </div>
