--- a/index.html
+++ b/index.html
@@ -270,10 +270,10 @@
                             <span>Project #1</span>
                             <h3>Ý tưởng khởi nghiệp</h3>
                             <p>
-                                The face of the driver is captured and right && left eyes are detected.
-                                If eye is closed the source value will be incremented.
-                                When the value reaches 4 or more the alarm sound will be played.
-                                Those score value will be send to the cloud simultaneously.
+                                Ý tưởng chính của dự án là tạo ra 1 nền tảng mua sắm trực tuyến!
+                                Giúp sinh viên có thể mua và bán các sản phẩm dịch vụ.
+                                Tăng cường bảo mật với hệ thống thanh toán an toàn.
+                                Mang lại nhiều lợi ích cho cộng đồng sinh viên UHL.
                             </p>
                             <div class="project-icons">
                                 <a href="https://github.com/BeThanh11T", target="_blank"><i class='bx bxl-github'></i></a>
