--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                             </p>
                             <div class="project-icons">
                                 <a href="https://github.com/BeThanh11T", target="_blank"><i class='bx bxl-github'></i></a>
-                                <a href="https://www.youtube.com/PhamKimThanh", target="_blank"><i class='bx bx-link-external'></i></a>
+                                <a href="https://uhl.edu.vn/tin-tuc/8-y-tuong-lot-vao-vong-chung-ket-cuoc-thi-sinh-vien-voi-y-tuong-khoi-nghiep-truong-dai-hoc-ha-long-nam-2024/", target="_blank"><i class='bx bx-link-external'></i></a>
                             </div>
                         </div>
                         <div class="project-tools">
