--- a/index.html
+++ b/index.html
@@ -296,15 +296,15 @@
                     <div class="project-details-box">
                         <div class="project-main-info">
                             <span>Project #2</span>
-                            <h3>Desktop Application</h3>
+                            <h3>Thiết kế Logo</h3>
                             <p>
-                                A windows application to manage the work of the staff’s in the company.
-                                The application will get the details of the work progress of the employee and store in the database.
-                                Also the manager can generate report from those data easily using the application.
+                                Giải ba thiết kế logo khoa Công nghệ thông tin.
+                                Với ý nghĩa vươn cao bay xa trên bầu trời công nghệ.
+                                Thể hiện mong muốn hoà bình để phát triển .
                             </p>
                             <div class="project-icons">
                                 <a href="https://github.com/BeThanh11T/", target="_blank"><i class='bx bxl-github'></i></a>
-                                <a href="https://www.youtube.com/c/Ph%E1%BA%A1mKimTh%C3%A0nh", target="_blank"><i class='bx bx-link-external'></i></a>
+                                <a href="https://www.facebook.com/story.php?story_fbid=964745611844267&id=100049265123114", target="_blank"><i class='bx bx-link-external'></i></a>
                             </div>
                         </div>
                         <div class="project-tools">
@@ -312,7 +312,7 @@
                         </div>
                     </div>
                     <div class="project-image-box">
-                        <a href="https://www.youtube.com/watch?v=E2Q2FvgzgNw", target="_blank", class="project-img-link">
+                        <a href="https://www.facebook.com/story.php?story_fbid=964745611844267&id=100049265123114", target="_blank", class="project-img-link">
                             <img src="./img/project.png" alt="Project Preview Image" />
                         </a>
                     </div>
