--- a/xo/index.html
+++ b/xo/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe - Modern Redesign</title>
+    <title>Cờ XO</title>
 
     <!-- Style CSS -->
     <link rel="stylesheet" href="./style.css">
@@ -28,7 +28,7 @@
         <div class="result-message" id="resultMessage" style="display: none;">
             <p id="winnerMessage"></p>
         </div>
-        <button id="restartButton" class="btn">Restart Game</button>
+        <button id="restartButton" class="btn">Chơi lại</button>
     </div>
 
     <!-- Script JS -->
