--- a/xo/index.html
+++ b/xo/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="game-container">
-        <h1>2 Player Tic Tac Toe Game</h1>
+        <h1>Cờ Caro 2 người chơi</h1>
         <div class="player-indicator">
-            <span id="player-turn">Player 1's Turn (X)</span>
+            <span id="player-turn">Lượt người chơi 1 (X)</span>
         </div>
         <div class="game-board" id="gameBoard">
             <div class="cell" data-cell></div>
