Update link FB index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 "url": "https://gocmod.com",
                 "image": "https://bethanh11t.github.io/profile/img/Preview.png",
                 "sameAs": [
-                    "https://fb.com/dung.goi.thanh.la.idol",
+                    "https://fb.com/BeThanh11T ",
                     "https://instagram.com/BeThanh11T"
                 ],
                 "jobTitle": "Web Developer",
@@ -87,7 +87,7 @@
                 <div class="home-sci">
                     <a href="https://www.gocmod.com"style="--i:7" target="_blank"><i class='bx bxl-linkedin'></i></a>
                     <a href="https://github.com/BeThanh11T"style="--i:8" target="_blank"><i class='bx bxl-github'></i></a>
-                    <a href="https://www.facebook.com/dung.goi.thanh.la.idol"style="--i:9" target="_blank"><i class='bx bxl-instagram' ></i></a>
+                    <a href="https://www.facebook.com/BeThanh11T"style="--i:9" target="_blank"><i class='bx bxl-instagram' ></i></a>
                     <a href="https://www.youtube.com/PhamKimThanh"style="--i:10" target="_blank"><i class='bx bxl-youtube'></i></a>
                 </div>
                 <a href="#RESUME LINK" style="--i:11" class="btn-box" target="_blank">Download Resume</a>
