--- a/thi/about.html
+++ b/thi/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Giới thiệu</title>
-    <link rel="stylesheet" href="CSS\styles.css">
+    <link rel="stylesheet" href="CSS\Styles.css">
     <link href="CSS/About.css" rel="stylesheet" />
 </head>
 <body>
