--- a/thi/cart.html
+++ b/thi/cart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Đồ điện dân dụng</title>
-    <link rel="stylesheet" href="CSS\styles.css">
+    <link rel="stylesheet" href="CSS\Styles.css">
 </head>
 <body>
     <header>
