--- a/thi/login.html
+++ b/thi/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đồ điện dân dụng</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/Styles.css">
     <link href="CSS/Account.css" rel="stylesheet" />
 </head>
 <body>
