--- a/thi/register.html
+++ b/thi/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng ký tài khoản</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/Styles.css">
     <link href="CSS/Account.css" rel="stylesheet" />
 </head>
 <body>
