--- a/thi/sanpham1.html
+++ b/thi/sanpham1.html
@@ -43,7 +43,7 @@
             <p>Mô tả ngắn: Enterogermina Gut Defense giúp tăng cường tiêu hóa, hỗ trợ bảo vệ đường ruột trước hại khuẩn.</p>
             <p>Số đăng ký: 2085/2024/ĐKSP</p>
             <button>Thêm vào giỏ hàng</button>
-            <a href="Thanhtoan.html">
+            <a href="pay.html">
                 <button>Mua ngay</button>
             </a>
         </div>
