--- a/thi/sanpham10.html
+++ b/thi/sanpham10.html
@@ -43,7 +43,7 @@
             <p>Mô tả ngắn: Thực phẩm bảo vệ sức khỏe NMN, PQQ giúp bổ sung NMN, PQQ và một số vitamin giúp chống oxy hóa; hỗ trợ chống lão hóa; giúp cải thiện làn da; giúp nâng cao sức khỏe và tăng cường sức đề kháng.</p>
             <p>Số đăng ký: 5483/2024/ĐKSP</p>
             <button>Thêm vào giỏ hàng</button>
-            <a href="Thanhtoan.html">
+            <a href="pay.html">
                 <button>Mua ngay</button>
             </a>
         </div>
