--- a/thi/sanpham11.html
+++ b/thi/sanpham11.html
@@ -42,7 +42,7 @@
             <p>Mô tả ngắn: Máy xông khí dung nén khí Yuwell 403M là thiết bị dùng để chuyển thuốc từ dạng dung dịch thành dạng sương mù, giúp thuốc đọng lại trên niêm mạc đường hô hấp, thấm sâu vào phế quản cho hiệu quả nhanh và giảm tối đa phản ứng phụ do thuốc uống gây nên.</p>
             <p>Số đăng ký: 240001288/PCBB-HCM</p>
             <button>Thêm vào giỏ hàng</button>
-            <a href="Thanhtoan.html">
+            <a href="pay.html">
                 <button>Mua ngay</button>
             </a>
         </div>
