--- a/thi/sanpham12.html
+++ b/thi/sanpham12.html
@@ -40,7 +40,7 @@
             <p>Thành phần: dưỡng ẩm tự nhiên chiết xuất từ hạt Ý dĩ, lá đào và rễ cam thảo</p>
             <p>Mô tả ngắn: Sữa rửa mặt Hatomugi ngừa mụn, dưỡng ẩm và làm sáng da Reihaku Hatomugi Acne Care & Facial Washing 130g chứa các thành phần dưỡng ẩm tự nhiên chiết xuất từ hạt Ý dĩ, lá đào và rễ cam thảo giúp loại bỏ bụi bẩn, dầu thừa ẩn sâu trong lỗ chân lông, hỗ trợ ngăn ngừa và làm giảm mụn trứng cá, đồng thời bổ sung độ ẩm, cải thiện tình trạng da khô thô ráp. </p>
             <button>Thêm vào giỏ hàng</button>
-            <a href="Thanhtoan.html">
+            <a href="pay.html">
                 <button>Mua ngay</button>
             </a>
         </div>
