--- a/thi/sanpham2.html
+++ b/thi/sanpham2.html
@@ -42,7 +42,7 @@
             <p>Mô tả ngắn: Nước súc miệng Pearlie White Fluorinze Anti-bacterial Fluoride được tạo ra bằng công thức không chứa cồn nhẹ nhàng với răng và nướu, giúp chống lại vi khuẩn gây mảng bám sâu răng và hơi thở có mùi, làm giảm và làm dịu sự khó chịu do cồn gây ra. Ngăn ngừa sâu răng và giúp men răng khỏe hơn. Giữ cho hơi thở thơm mát, bảo vệ nướu khỏe mạnh.</p>
             <p>Số đăng ký: 2085/2024/ĐKSP</p>
             <button>Thêm vào giỏ hàng</button>
-            <a href="Thanhtoan.html">
+            <a href="pay.html">
                 <button>Mua ngay</button>
             </a>
         </div>
