--- a/thi/sanpham3.html
+++ b/thi/sanpham3.html
@@ -43,7 +43,7 @@
             <p>Mô tả ngắn: Bổ Phế Lábebé hỗ trợ bổ phế, giúp giảm ho, giảm đờm, giảm đau họng, khản tiếng do viêm họng, viêm phế quản.</p>
             <p>Số đăng ký: 2719/2024/ĐKSP</p>
             <button>Thêm vào giỏ hàng</button>
-            <a href="Thanhtoan.html">
+            <a href="pay.html">
                 <button>Mua ngay</button>
             </a>
         </div>
