--- a/thi/sanpham4.html
+++ b/thi/sanpham4.html
@@ -43,7 +43,7 @@
             <p>Mô tả ngắn: Nhiệt kế hồng ngoại Yuwell YT-1C được dùng để đo nhiệt độ cơ thể người và môi trường xung quanh. Sản phẩm đo không tiếp xúc, không dùng thủy ngân, đảm bảo an toàn hơn.</p>
             <p>Số đăng ký: 240000987/PCBA-HCM</p>
             <button>Thêm vào giỏ hàng</button>
-            <a href="Thanhtoan.html">
+            <a href="pay.html">
                 <button>Mua ngay</button>
             </a>
         </div>
