--- a/thi/sanpham5.html
+++ b/thi/sanpham5.html
@@ -46,7 +46,7 @@
             <p>Mô tả ngắn: Thuốc Telfor 60 là sản phẩm của công ty Dược Hậu Giang sản xuất, hoạt chất chính là Fexofenadin HCl, được dùng trong các trường hợp viêm mũi dị ứng hay nổi mề đay tự phát mạn tính.</p>
             <p>Số đăng ký: VD-26604-17</p>
             <button>Thêm vào giỏ hàng</button>
-            <a href="Thanhtoan.html">
+            <a href="pay.html">
                 <button>Mua ngay</button>
             </a>
         </div>
