--- a/thi/sanpham6.html
+++ b/thi/sanpham6.html
@@ -47,7 +47,7 @@
             <p>Mô tả ngắn: Thuốc Hapacol 150 là sản phẩm của Công ty Cổ phần Dược Hậu Giang, thành phần chính là Paracetamol, là thuốc dùng để giảm đau, hạ sốt hữu hiệu cho trẻ em trong các trường hợp như cảm, cúm, sốt xuất huyết, nhiễm khuẩn, nhiễm siêu vi, mọc răng, sau khi tiêm chủng, sau phẫu thuật…</p>
             <p>Số đăng ký: VD-21137-14</p>
             <button>Thêm vào giỏ hàng</button>
-            <a href="Thanhtoan.html">
+            <a href="pay.html">
                 <button>Mua ngay</button>
             </a>
         </div>
