--- a/thi/sanpham7.html
+++ b/thi/sanpham7.html
@@ -43,7 +43,7 @@
             <p>Mô tả ngắn: Orihiro Glucosamine 900 hỗ trợ làm trơn ổ khớp, hỗ trợ hạn chế lão hóa khớp. Hỗ trợ giảm triệu chứng đau khớp, khô khớp do viêm khớp, thoái hóa khớp.</p>
             <p>Số đăng ký: 9821/2021/ĐKSP</p>
             <button>Thêm vào giỏ hàng</button>
-            <a href="Thanhtoan.html">
+            <a href="pay.html">
                 <button>Mua ngay</button>
             </a>
         </div>
