--- a/thi/sanpham8.html
+++ b/thi/sanpham8.html
@@ -44,7 +44,7 @@
             <p>Đối tượng sử dụng: Trẻ en</p>
             <p>Số đăng ký: 240001288/PCBB-HCM</p>
             <button>Thêm vào giỏ hàng</button>
-            <a href="Thanhtoan.html">
+            <a href="pay.html">
                 <button>Mua ngay</button>
             </a>
         </div>
