--- a/thi/sanpham9.html
+++ b/thi/sanpham9.html
@@ -43,7 +43,7 @@
             <p>Mô tả ngắn: Hồng sâm cô đặc Hongsamjin Everystick EX là sản phẩm có sự kết hợp chiết xuất hồng sâm Hàn Quốc 6 năm tuổi cùng 9 thành phần cao cấp, quý hiếm như: Bạch chỉ Hàn Quốc, cây hoàng kỳ, rễ hoa mẫu đơn, cam thảo, quế Trung Quốc, cây koidzumi, cây makino, cây địa hoàng và phục linh, mang đến giá trị dinh dưỡng tuyệt vời với dạng thanh độc đáo, hiện đại và rất tiện lợi.</p>
             <p>Đối tượng sử dụng: Người lớn, Trẻ em</p>
             <button>Thêm vào giỏ hàng</button>
-            <a href="Thanhtoan.html">
+            <a href="pay.html">
                 <button>Mua ngay</button>
             </a>
         </div>
