--- a/thi/index.html
+++ b/thi/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Nhà thuốc Long Châu</title>
-    <link rel="stylesheet" href="CSS\Styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Thuốc Crestor</title>
+    <link href="CSS/Shop.css" rel="stylesheet" />
+    <link href="CSS/Infor.css" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -20,80 +22,36 @@
             </nav>
         </div>
     </header>
-
     <div class="menu">
         <a href="index.html" class="menu-item">Trang chủ</a>
         <a href="about.html" class="menu-item">Giới thiệu</a>
         <a href="products.html" class="menu-item">Sản phẩm</a>
         <a href="contact.html" class="menu-item">Liên hệ</a>
     </div>
-
-    <div class="main-content">
-        <img src="IMG/quangcao.png" width="100%">
-        <div class="product-list">
-            <div class="product-item">
-                <a href="sanpham1.html"><img src="IMG/sanpham1.png" alt="Product 1"></a>
-                    <p class="product-name">Men vi sinh Enterogermina Gut Defense Sanofi</p>
-                    <p class="product-price">157.000đ / Hộp</p>
-</div>
-            <div class="product-item">
-                <a href="sanpham2.html"><img src="IMG/sanpham2.png" alt="Product 2"></a>
-                    <p class="product-name">Nước súc miệng Pearlie White Fluorinze</p>
-                    <p class="product-price">132.000đ / Chai</p>
-</div>
-            <div class="product-item">
-                <a href="sanpham3.html"><img src="IMG/sanpham3.png" alt="Product 3"></a>
-                    <p class="product-name">Siro Bổ Phế Lábebé</p>
-                    <p class="product-price">60.000đ / Hộp</p>
-</div>
-            <div class="product-item">
-                <a href="sanpham4.html"><img src="IMG/sanpham4.png" alt="Product 4"></a>
-                    <p class="product-name">Nhiệt kế hồng ngoại Yuwell YT-1C</p>
-                    <p class="product-price">472.000đ / Hộp</p>
-</div>
-            <div class="product-item">
-                <a href="sanpham5.html"><img src="IMG/sanpham5.png" alt="Product 5"></a>
-                    <p class="product-name">Thuốc Telfor 60 DHG</p>
-                    <p class="product-price">1.300đ / Viên</p>
-</div>
-            <div class="product-item">
-                <a href="sanpham6.html"><img src="IMG/sanpham6.png" alt="Product 6"></a>
-                    <p class="product-name">Bột Hapacol 150 DHG</p>
-                    <p class="product-price">34.800đ / Hộp</p>
-</div>
-            <div class="product-item">
-                <a href="sanpham7.html"><img src="IMG/sanpham7.png" alt="Product 7"></a>
-                    <p class="product-name">Viên nén Orihiro Glucosamine 900</p>
-                    <p class="product-price">575.000đ / Hộp</p>
-</div>
-            <div class="product-item">
-                <a href="sanpham8.html"><img src="IMG/sanpham8.png" alt="Product 8"></a>
-                    <p class="product-name">Dung dịch LineaBon K2+D3 ErgoPharm</p>
-                    <p class="product-price">295.000đ / Hộp</p>
-</div>
-            <div class="product-item">
-                <a href="sanpham9.html"><img src="IMG/sanpham9.png" alt="Product 9"></a>
-                <p class="product-name">Nước Hồng Sâm Cô Đặc Hongsamjin Everystick EX</p>
-                <p class="product-price">1.200.000đ / Hộp</p>
-            </div>
-            <div class="product-item">
-                <a href="sanpham10.html"><img src="IMG/sanpham10.png" alt="Product 10"></a>
-                    <p class="product-name">Thực phẩm bảo vệ sức khỏe NMN PQQ</p>
-                    <p class="product-price">6.675.000đ / Hộp</p>
-            </div>
-            <div class="product-item">
-                <a href="sanpham11.html"><img src="IMG/sanpham11.png" alt="Product 11"></a>
-                <p class="product-name">Máy xông khí dung nén khí Yuwell 403M</p>
-                <p class="product-price">1.210.000đ / Hộp</p>
-            </div>
-            <div class="product-item">
-                <a href="sanpham12.html"><img src="IMG/sanpham12.png" alt="Product 12"></a>
-                <p class="product-name">Sữa rửa mặt Reihaku Hatomugi Acne Care</p>
-                <p class="product-price">87.200đ / Tuýp</p>
-            </div>
+    <div class="product-detail">
+        <img src="IMG/sanpham18.png" alt="Thuốc">
+        <div class="product-info">
+            <h2>Thuốc Crestor 20mg AstraZeneca điều trị tăng cholesterol máu nguyên phát (2 vỉ x 14 viên)</h2>
+            <p>Giá: <span class="product-price">160.000đ / Hộp</span></p>
+            <p>Danh mục:  Thuốc trị mỡ máu</p>
+            <p>Dạng bào chế: Viên nén bao phim</p>
+            <p>Quy cách: Hộp 2 Vỉ x 14 Viên</p>
+            <p>Xuất xứ thương hiệu: Anh</p>
+            <p>Nhà sản xuất: IPR Pharmaceuticals Inc.</p>
+            <p>Nước sản xuất: USA</p>
+            <p>Thành phần: Rosuvastatin</p>
+            <p>Đối tượng sử dụng: Người cao tuổi, Trẻ em, Người lớn</p>
+            <p>Thuốc cần kê toa: Có</p>
+            <p>Mô tả ngắn: Crestor 20 mg dùng để điều trị tăng cholesterol máu nguyên hoặc rối loạn lipid máu hỗn hợp. Là một liệu pháp hỗ trợ cho chế độ ăn kiêng khi bệnh nhân không đáp ứng đầy đủ với chế độ ăn kiêng và các liệu pháp không dùng thuốc khác.</p>
+            <p>Số đăng ký: VN-18151-14</p>
+            <p>Lưu ý: Sản phẩm này chỉ bán khi có chỉ định của bác sĩ, mọi thông tin trên Website chỉ mang tính chất tham khảo.</p>
+            <button>Thêm vào giỏ hàng</button>
+            <a href="pay.html">
+                <button>Mua ngay</button>
+            </a>
         </div>
-        <img src="IMG/banner.png" width="100%" />
     </div>
+
     <footer>
         <div class="container">
             <p>Phạm Mạnh Tuấn KHMT K9</p>
