--- a/thi/contact.html
+++ b/thi/contact.html
@@ -33,8 +33,8 @@
         <div class="contact-info">
             <h2>Liên hệ với chúng tôi</h2>
             <h3>Nhà thuốc Long Châu</h3>
-            <p><i class="fas fa-map-marker-alt"></i> Địa chỉ:<br> Tổ 4, Khu 3B, P Giếng Đáy, TP Hạ Long, Quảng Ninh</p>
-            <p><i class="fas fa-map-marker-alt"></i> Địa chỉ:<br> SN 09, Khu Cát Thành, P.Minh Thành, Quảng Yên, Quảng Ninh</p>
+            <p><i class="fas fa-map-marker-alt"></i> Địa chỉ:<br> Tổ 4, Khu 3B, P.Giếng Đáy, TP Hạ Long, Quảng Ninh</p>
+            <p><i class="fas fa-map-marker-alt"></i> Địa chỉ:<br> Khu Cát Thành, P.Minh Thành, Quảng Yên, Quảng Ninh</p>
             <p><i class="fas fa-phone"></i> Điện thoại:<br> 0385668901 - 0389850647</p>
             <p><i class="fas fa-envelope"></i> E-mail:<br> bethanh11t.vn@gmail.com</p>
         </div>
