--- a/thi/cart.html
+++ b/thi/cart.html
@@ -1,50 +1,49 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Đồ điện dân dụng</title>
+    <title>Giỏ hàng</title>
     <link rel="stylesheet" href="CSS\Styles.css">
 </head>
 <body>
-    <header>
-        <div class="containe">
-            <nav>
-                <div class="search-box">
-                    <input type="text" placeholder="Tìm kiếm...">
-                </div>
-                <div class="nav-links">
-                    <a href="cart.html">Giỏ hàng</a>
-                    <a href="login.html">Đăng Nhập</a>
-                    <a href="register.html">Đăng Ký</a>
-                </div>
-            </nav>
-        </div>
-    </header>
-
-    <div class="menu">
-        <a href="index.html" class="menu-item">Trang chủ</a>
-        <a href="about.html" class="menu-item">Giới thiệu</a>
-        <a href="products.html" class="menu-item">Sản phẩm</a>
-        <a href="contact.html" class="menu-item">Liên hệ</a>
-    </div>
-    <main>
-        <section id="cart" class="cart-section">
-            <div class="container">
-                <h2>Giỏ Hàng Của Bạn</h2>
-                <img src="IMG/empty_cart.png" />
-                <p>Hiện tại, giỏ hàng của bạn đang trống.</p>
-                <a href="products.html" class="btn">Mua Hàng</a>
-                <br />
-                <br />
-                <img src="IMG/banner.png" width="100%" />
+    <div class="wrapper">
+        <header>
+            <div class="containe">
+                <nav>
+                    <div class="search-box">
+                        <input type="text" placeholder="Tìm kiếm...">
+                    </div>
+                    <div class="nav-links">
+                        <a href="cart.html">Giỏ hàng</a>
+                        <a href="login.html">Đăng Nhập</a>
+                        <a href="register.html">Đăng Ký</a>
+                    </div>
+                </nav>
             </div>
-        </section>
-    </main>
-    <footer>
-        <div class="container">
-            <p>Phạm Mạnh Tuấn KHMT K9</p>
-            <p>Phạm Kim Thành KHMT K9</p>
+        </header>
+
+        <div class="menu">
+            <a href="index.html" class="menu-item">Trang chủ</a>
+            <a href="about.html" class="menu-item">Giới thiệu</a>
+            <a href="products.html" class="menu-item">Sản phẩm</a>
+            <a href="contact.html" class="menu-item">Liên hệ</a>
         </div>
-    </footer>
+        <main>
+            <section id="cart" class="cart-section">
+                <div class="container">
+                    <h2>Giỏ Hàng Của Bạn</h2>
+                    <img src="IMG/empty_cart.png" />
+                    <p>Hiện tại, giỏ hàng của bạn đang trống.</p>
+                    <a href="products.html" class="btn">Mua Hàng</a>
+                    <br />
+                    <br />
+                    <img src="IMG/banner.png" width="100%" />
+                </div>
+            </section>
+        </main>
+        <footer>
+            <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
+        </footer>
+        </div>
 </body>
 </html>
