--- a/thi/contact.html
+++ b/thi/contact.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -34,7 +34,7 @@
             <h2>Liên hệ với chúng tôi</h2>
             <h3>Nhà thuốc Long Châu</h3>
             <p><i class="fas fa-map-marker-alt"></i> Địa chỉ:<br> Tổ 4, Khu 3B, P.Giếng Đáy, TP Hạ Long, Quảng Ninh</p>
-            <p><i class="fas fa-map-marker-alt"></i> Địa chỉ:<br> Khu Cát Thành, P.Minh Thành, Quảng Yên, Quảng Ninh</p>
+            <p><i class="fas fa-map-marker-alt"></i> Địa chỉ:<br> Khu Cát Thành, P.Minh Thành,TX Quảng Yên, Quảng Ninh</p>
             <p><i class="fas fa-phone"></i> Điện thoại:<br> 0385668901 - 0389850647</p>
             <p><i class="fas fa-envelope"></i> E-mail:<br> bethanh11t.vn@gmail.com</p>
         </div>
@@ -50,10 +50,7 @@
         </div>
     </div>
     <footer>
-        <div class="container">
-            <p>Phạm Mạnh Tuấn KHMT K9</p>
-            <p>Phạm Kim Thành KHMT K9</p>
-        </div>
+        <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
     </footer>
 </body>
 </html>
