--- a/thi/index.html
+++ b/thi/index.html
@@ -6,129 +6,129 @@
     <link rel="stylesheet" href="CSS\Styles.css">
 </head>
 <body>
-    <header>
-        <div class="containe">
-            <nav>
-                <div class="search-box">
-                    <input type="text" placeholder="Tìm kiếm...">
-                </div>
-                <div class="nav-links">
-                    <a href="cart.html">Giỏ hàng</a>
-                    <a href="login.html">Đăng Nhập</a>
-                    <a href="register.html">Đăng Ký</a>
-                </div>
-            </nav>
+    <div class="wrapper">
+        <header>
+            <div class="containe">
+                <nav>
+                    <div class="search-box">
+                        <input type="text" placeholder="Tìm kiếm...">
+                    </div>
+                    <div class="nav-links">
+                        <a href="cart.html">Giỏ hàng</a>
+                        <a href="login.html">Đăng Nhập</a>
+                        <a href="register.html">Đăng Ký</a>
+                    </div>
+                </nav>
+            </div>
+        </header>
+
+        <div class="menu">
+            <a href="index.html" class="menu-item">Trang chủ</a>
+            <a href="about.html" class="menu-item">Giới thiệu</a>
+            <a href="products.html" class="menu-item">Sản phẩm</a>
+            <a href="contact.html" class="menu-item">Liên hệ</a>
         </div>
-    </header>
 
-    <div class="menu">
-        <a href="index.html" class="menu-item">Trang chủ</a>
-        <a href="about.html" class="menu-item">Giới thiệu</a>
-        <a href="products.html" class="menu-item">Sản phẩm</a>
-        <a href="contact.html" class="menu-item">Liên hệ</a>
-    </div>
-
-    <div class="main-content">
-        <img src="IMG/quangcao.png" width="100%">
-        <div class="product-list">
-            <div class="product-item">
-                <a href="sanpham1.html"><img src="IMG/sanpham1.png" alt="Product 1"></a>
+        <div class="main-content">
+            <img src="IMG/quangcao.png" width="100%">
+            <div class="product-list">
+                <div class="product-item">
+                    <a href="sanpham1.html"><img src="IMG/sanpham1.png" alt="Product 1"></a>
                     <p class="product-name">Men vi sinh Enterogermina Gut Defense Sanofi</p>
                     <p class="product-price">157.000đ / Hộp</p>
-</div>
-            <div class="product-item">
-                <a href="sanpham2.html"><img src="IMG/sanpham2.png" alt="Product 2"></a>
+                </div>
+                <div class="product-item">
+                    <a href="sanpham2.html"><img src="IMG/sanpham2.png" alt="Product 2"></a>
                     <p class="product-name">Nước súc miệng Pearlie White Fluorinze</p>
                     <p class="product-price">132.000đ / Chai</p>
-</div>
-            <div class="product-item">
-                <a href="sanpham3.html"><img src="IMG/sanpham3.png" alt="Product 3"></a>
+                </div>
+                <div class="product-item">
+                    <a href="sanpham3.html"><img src="IMG/sanpham3.png" alt="Product 3"></a>
                     <p class="product-name">Siro Bổ Phế Lábebé</p>
                     <p class="product-price">60.000đ / Hộp</p>
-</div>
-            <div class="product-item">
-                <a href="sanpham4.html"><img src="IMG/sanpham4.png" alt="Product 4"></a>
+                </div>
+                <div class="product-item">
+                    <a href="sanpham4.html"><img src="IMG/sanpham4.png" alt="Product 4"></a>
                     <p class="product-name">Nhiệt kế hồng ngoại Yuwell YT-1C</p>
                     <p class="product-price">472.000đ / Hộp</p>
-</div>
-            <div class="product-item">
-                <a href="sanpham5.html"><img src="IMG/sanpham5.png" alt="Product 5"></a>
+                </div>
+                <div class="product-item">
+                    <a href="sanpham5.html"><img src="IMG/sanpham5.png" alt="Product 5"></a>
                     <p class="product-name">Thuốc Telfor 60 DHG</p>
                     <p class="product-price">1.300đ / Viên</p>
-</div>
-            <div class="product-item">
-                <a href="sanpham6.html"><img src="IMG/sanpham6.png" alt="Product 6"></a>
+                </div>
+                <div class="product-item">
+                    <a href="sanpham6.html"><img src="IMG/sanpham6.png" alt="Product 6"></a>
                     <p class="product-name">Bột Hapacol 150 DHG</p>
                     <p class="product-price">34.800đ / Hộp</p>
-</div>
-            <div class="product-item">
-                <a href="sanpham7.html"><img src="IMG/sanpham7.png" alt="Product 7"></a>
+                </div>
+                <div class="product-item">
+                    <a href="sanpham7.html"><img src="IMG/sanpham7.png" alt="Product 7"></a>
                     <p class="product-name">Viên nén Orihiro Glucosamine 900</p>
                     <p class="product-price">575.000đ / Hộp</p>
-</div>
-            <div class="product-item">
-                <a href="sanpham8.html"><img src="IMG/sanpham8.png" alt="Product 8"></a>
+                </div>
+                <div class="product-item">
+                    <a href="sanpham8.html"><img src="IMG/sanpham8.png" alt="Product 8"></a>
                     <p class="product-name">Dung dịch LineaBon K2+D3 ErgoPharm</p>
                     <p class="product-price">295.000đ / Hộp</p>
-</div>
-            <div class="product-item">
-                <a href="sanpham9.html"><img src="IMG/sanpham9.png" alt="Product 9"></a>
-                <p class="product-name">Nước Hồng Sâm Cô Đặc Hongsamjin Everystick EX</p>
-                <p class="product-price">1.200.000đ / Hộp</p>
-            </div>
-            <div class="product-item">
-                <a href="sanpham10.html"><img src="IMG/sanpham10.png" alt="Product 10"></a>
+                </div>
+                <div class="product-item">
+                    <a href="sanpham9.html"><img src="IMG/sanpham9.png" alt="Product 9"></a>
+                    <p class="product-name">Nước Hồng Sâm Cô Đặc Hongsamjin Everystick EX</p>
+                    <p class="product-price">1.200.000đ / Hộp</p>
+                </div>
+                <div class="product-item">
+                    <a href="sanpham10.html"><img src="IMG/sanpham10.png" alt="Product 10"></a>
                     <p class="product-name">Thực phẩm bảo vệ sức khỏe NMN PQQ</p>
                     <p class="product-price">6.675.000đ / Hộp</p>
+                </div>
+                <div class="product-item">
+                    <a href="sanpham11.html"><img src="IMG/sanpham11.png" alt="Product 11"></a>
+                    <p class="product-name">Máy xông khí dung nén khí Yuwell 403M</p>
+                    <p class="product-price">1.210.000đ / Hộp</p>
+                </div>
+                <div class="product-item">
+                    <a href="sanpham12.html"><img src="IMG/sanpham12.png" alt="Product 12"></a>
+                    <p class="product-name">Sữa rửa mặt Reihaku Hatomugi Acne Care</p>
+                    <p class="product-price">87.200đ / Tuýp</p>
+                </div>
+                <div class="product-item">
+                    <a href="sanpham13.html"><img src="IMG/sanpham13.png" alt="Product 13"></a>
+                    <p class="product-name">Kem đánh răng Sensodyne Repair And Protect</p>
+                    <p class="product-price">90.000đ / Tuýp</p>
+                </div>
+                <div class="product-item">
+                    <a href="sanpham14.html"><img src="IMG/sanpham14.png" alt="Product 14"></a>
+                    <p class="product-name">Chai xịt Zuchi Family</p>
+                    <p class="product-price">29.000đ / Chai</p>
+                </div>
+                <div class="product-item">
+                    <a href="sanpham15.html"><img src="IMG/sanpham15.png" alt="Product 14"></a>
+                    <p class="product-name">Viên uống LéAna Ocavill</p>
+                    <p class="product-price">540.000đ / Hộp</p>
+                </div>
+                <div class="product-item">
+                    <a href="sanpham16.html"><img src="IMG/sanpham16.png" alt="Product 14"></a>
+                    <p class="product-name">Sữa bột CaloSure gold Vitadairy</p>
+                    <p class="product-price">408.000đ / Chai</p>
+                </div>
+                <div class="product-item">
+                    <a href="sanpham17.html"><img src="IMG/sanpham17.png" alt="Product 14"></a>
+                    <p class="product-name">Cốm Lacto Biomin Gold</p>
+                    <p class="product-price">108.000đ / Hộp</p>
+                </div>
+                <div class="product-item">
+                    <a href="sanpham18.html"><img src="IMG/sanpham18.png" alt="Product 14"></a>
+                    <p class="product-name">Thuốc Crestor</p>
+                    <p class="product-price">160.000đ / Hộp</p>
+                </div>
             </div>
-            <div class="product-item">
-                <a href="sanpham11.html"><img src="IMG/sanpham11.png" alt="Product 11"></a>
-                <p class="product-name">Máy xông khí dung nén khí Yuwell 403M</p>
-                <p class="product-price">1.210.000đ / Hộp</p>
-            </div>
-            <div class="product-item">
-                <a href="sanpham12.html"><img src="IMG/sanpham12.png" alt="Product 12"></a>
-                <p class="product-name">Sữa rửa mặt Reihaku Hatomugi Acne Care</p>
-                <p class="product-price">87.200đ / Tuýp</p>
-            </div>
-            <div class="product-item">
-                <a href="sanpham13.html"><img src="IMG/sanpham13.png" alt="Product 13"></a>
-                <p class="product-name">Kem đánh răng Sensodyne Repair And Protect</p>
-                <p class="product-price">90.000đ / Tuýp</p>
-            </div>
-            <div class="product-item">
-                <a href="sanpham14.html"><img src="IMG/sanpham14.png" alt="Product 14"></a>
-                <p class="product-name">Chai xịt Zuchi Family</p>
-                <p class="product-price">29.000đ / Chai</p>
-            </div>
-            <div class="product-item">
-                <a href="sanpham15.html"><img src="IMG/sanpham15.png" alt="Product 14"></a>
-                <p class="product-name">Viên uống LéAna Ocavill</p>
-                <p class="product-price">540.000đ / Hộp</p>
-            </div>
-            <div class="product-item">
-                <a href="sanpham16.html"><img src="IMG/sanpham16.png" alt="Product 14"></a>
-                <p class="product-name">Sữa bột CaloSure gold Vitadairy</p>
-                <p class="product-price">408.000đ / Chai</p>
-            </div>
-            <div class="product-item">
-                <a href="sanpham17.html"><img src="IMG/sanpham17.png" alt="Product 14"></a>
-                <p class="product-name">Cốm Lacto Biomin Gold</p>
-                <p class="product-price">108.000đ / Hộp</p>
-            </div>
-            <div class="product-item">
-                <a href="sanpham18.html"><img src="IMG/sanpham18.png" alt="Product 14"></a>
-                <p class="product-name">Thuốc Crestor</p>
-                <p class="product-price">160.000đ / Hộp</p>
-            </div>
+           
         </div>
-        <img src="IMG/banner.png" width="100%" />
-    </div>
-    <footer>
-        <div class="container">
-            <p>Phạm Mạnh Tuấn KHMT K9</p>
-            <p>Phạm Kim Thành KHMT K9</p>
+        <footer>
+            <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
+        </footer>
+
         </div>
-    </footer>
 </body>
 </html>
